--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.ReminderActivity"></activity>
+        <activity android:name=".activities.ReminderActivity"
+            android:parentActivityName=".activities.ReminderListActivity"></activity>
         <activity android:name=".activities.ReminderListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
