--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,30 +19,20 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
 
     <application
-        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <receiver
-            android:name=".AlarmManagerBroadcastReceiver"
-            android:directBootAware="true"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
-            </intent-filter>
-        </receiver>
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -62,7 +52,6 @@
 
         <activity
             android:name=".activities.MainOrganizerActivity"
-            android:label="@string/title_activity_main_organizer"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -84,8 +73,7 @@
 
         <activity
             android:name=".activities.ReminderPagerActivity"
-            android:parentActivityName=".activities.MainOrganizerActivity"
-            tools:ignore="DuplicateActivity" />
+            android:parentActivityName=".activities.MainOrganizerActivity" />
         <activity android:name=".activities.SingleFragmentActivity" />
 
     </application>
