--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,16 +42,19 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha04'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.room:room-runtime:2.2.5'
     annotationProcessor 'androidx.room:room-compiler:2.2.5'
     androidTestImplementation 'androidx.room:room-testing:2.2.5'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0'
     implementation 'com.github.clans:fab:1.6.4'
-    implementation 'com.google.android.material:material:1.1.0'
 
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+
+    implementation 'com.google.android.libraries.places:places:2.4.0'
+
     implementation 'com.squareup.okhttp3:logging-interceptor:4.8.0'
     implementation 'com.squareup.okhttp3:okhttp:4.8.0'
 
@@ -63,4 +66,10 @@ dependencies {
 
     implementation 'com.google.zxing:core:3.3.3'
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0@aar'
+
+    // Material Dialog Library
+    implementation 'com.afollestad.material-dialogs:bottomsheets:3.3.0'
+
+    implementation 'androidx.activity:activity:1.1.0'
+
 }
